syntax = "proto3";
package dev.array21.invoicex;

message RemoveOrgRequest {
  string orgId = 1;
}